--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,8 @@ primary_region = 'syd'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 256
+
+[mounts]
+  source = "orm_gin"
+  destination = "/data"
+
